--- a/src/app/dash-board/masters/regionmaster/regionmaster.component.html
+++ b/src/app/dash-board/masters/regionmaster/regionmaster.component.html
@@ -1,16 +1,16 @@
 <fieldset class="scheduler-border">
-    <legend class="scheduler-border">Executive Master</legend>
+    <legend class="scheduler-border">Region Master</legend>
     <div class="formData">
-        <form [formGroup]="machineForm" (ngSubmit)="onUserClick($event, machineForm)">
+        <form [formGroup]="regionForm" (ngSubmit)="onUserClick($event, regionForm)">
             <div class="row">
                 <div class="col-xs-3 col-sm-3 ">
                     <div class="form-group">
-                        <label path="machinename" for="machinename" cssClass="required">
-                            Executive</label>
-                        <input formControlName="machinename" class="form-control"
-                            [ngClass]="{ 'is-invalid': submitted && f.machinename.errors }" />
-                        <div *ngIf="submitted && f.machinename.errors" class="invalid-feedback">
-                            <div *ngIf="f.machinename.errors.required">Executive is required
+                        <label path="region" for="region" cssClass="required">
+                            Region</label>
+                        <input formControlName="region" class="form-control"
+                            [ngClass]="{ 'is-invalid': submitted && f.region.errors }" />
+                        <div *ngIf="submitted && f.region.errors" class="invalid-feedback">
+                            <div *ngIf="f.region.errors.required">Region is required
                             </div>
                         </div>
                     </div>
@@ -29,7 +29,6 @@
                 </div>
             </div>
             <div class="row">
-
                 <div class="col-sm-12 ">
                     <div class="form-group text-right">
                         <button type="submit" class="btn btn-primary mr-2">
@@ -46,7 +45,7 @@
 </fieldset>
 
 <fieldset class="scheduler-border">
-    <legend class="scheduler-border">Executive Master</legend>
+    <legend class="scheduler-border">Region Master</legend>
     <ag-grid-angular #agGrid class="ag-theme-balham" [gridOptions]="gridOptions" style="width: 100%; height: 350px;"
         [pagination]="true" [frameworkComponents]="frameworkComponents">
     </ag-grid-angular>
