--- a/src/app/dash-board/booking/caseentry/caseentryy/caseentryy.component.html
+++ b/src/app/dash-board/booking/caseentry/caseentryy/caseentryy.component.html
@@ -37,11 +37,12 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-6 col-sm-6 ">
+                <div class="col-lg-6 col-lg-6 ">
                     <form [formGroup]="myForm">
                         <div fxLayout="row">
                             <label>Machine</label>
-                            <label style="margin-left: 43%;">Number of Cases</label>
+                            <label style="margin-left: 19%;">Number of Cases</label>
+                            <label style="margin-left: 12%;">Charges</label>
                         </div>
                         <div formArrayName='times' fxLayout="column" fxLayoutGap="10px">
                             <div *ngFor="let time of this.fa?.value; let i = index;  trackBy:trackByFn" fxLayout="row">
@@ -56,7 +57,9 @@
                                         </option>
                                     </select>
                                     <input formControlName="numofcase" class="form-control" path="numofcase"
-                                        name="numofcase" style="margin-left: 25%;" />
+                                        name="numofcase" style="margin-left: 8%;" />
+                                    <input formControlName="charge" class="form-control" path="charge" name="charge"
+                                        style="margin-left: 6%;" />
                                 </div>
                                 <button (click)="addGroup()" class="btn btn-primary btn-sm"><i class="fa fa-plus"
                                         aria-hidden="true"></i></button>
@@ -66,7 +69,7 @@
                         </div><br>
                     </form>
                 </div>
-                <div class="col-xs-3 form-group">
+                <!-- <div class="col-xs-3 form-group">
                     <label path="charge" for="charge" cssClass="required">Charges
                     </label>
                     <input formControlName="charge" class="form-control" path="charge" name="charge"
@@ -74,17 +77,13 @@
                     <div *ngIf="submitted && f.charge.errors" class="invalid-feedback">
                         <div *ngIf="f.charge.errors.required">Charges is Required</div>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-xs-3 form-group">
                     <div class="form-group">
                         <label>Send Bill</label>
                         <div class="switch">
                             <input type="checkbox" formControlName="status" checked>
                         </div>
-                        <div *ngIf="submitted && f.status.errors" class="invalid-feedback">
-                            <div *ngIf="f.status.errors.required">Status is required</div>
-                        </div>
-
                     </div>
                 </div>
             </div>
