--- a/src/app/dash-board/booking/appointment/bookingmanagement/bookingmanagement.component.css
+++ b/src/app/dash-board/booking/appointment/bookingmanagement/bookingmanagement.component.css
@@ -16,7 +16,7 @@
     float: right;
 }
 
-::ng-deep .modal-dialog {
-    width: 650px !important;
+::ng-deep.modal-dialog {
+    width: 600px;
     margin: 30px auto;
 }
