--- a/src/app/dash-board/booking/calendar-table/calendar-table.component.css
+++ b/src/app/dash-board/booking/calendar-table/calendar-table.component.css
@@ -53,8 +53,7 @@
   border-color: #3f51b5 !important;
 }
 
-::ng-deep .btn {
-  position: absolute;
-  background-color: #3f51b5;
-  color: white;
+::ng-deep .modal-dialog {
+  width: 900px !important;
+  margin: 30px auto;
 }
