--- a/src/assets/css/common/styles.css
+++ b/src/assets/css/common/styles.css
@@ -1768,7 +1768,7 @@ body::-webkit-validation-bubble-arrow:increment {
 
 fieldset.scheduler-border {
     border: 1px solid #d9d9d9 !important;
-    padding: 0 1.4em 5.4em 1.4em !important;
+    /* padding: 0 1.4em 5.4em 1.4em !important; */
     margin: 0 1.5em 1.5em 0 !important;
     font-size: 11px;
     border-radius: 5px;
